tests/syntax-error/triple-for-shadow.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g triple-for-shadow.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: triple-for-shadow.silly:10:9: error: Induction variable i used by enclosing FOR
// CHECK:    10 |         FOR (INT32 i: (0,2)) {  // expect death: shadows outer i
// CHECK:       |         ^


FOR (INT32 i: (0,2)) {
    FOR (INT32 j: (0,2)) {
        FOR (INT32 i: (0,2)) {  // expect death: shadows outer i
            PRINT "inner i=", i, " j=", j, " outer-ish i=", i;
        };
    };
};
